--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,22 @@
-aiofiles==23.2.1
-asgiref==3.7.2
-Flask==3.0.0
-Jinja2==3.1.2
-kaggle==1.5.16
-MarkupSafe==2.1.3
-python-dateutil==2.8.2
-python-slugify==8.0.1
-requests==2.31.0
-six==1.16.0
-text-unidecode==1.3
-tqdm==4.66.1
-urllib3==2.1.0
-webencodings==0.5.1
-Werkzeug==3.0.1
+aiofiles
+asgiref
+bleach
+blinker
+certifi
+charset-normalizer
+click
+Flask[async]
+idna
+itsdangerous
+Jinja2
+kaggle
+MarkupSafe
+python-dateutil
+python-slugify
+requests
+six
+text-unidecode
+tqdm
+urllib3
+webencodings
+Werkzeug
